# trading1stop

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  package.json  pyproject.toml  requirements.txt  sources.yaml  vercel.json
.github/workflows/: daily.yml
.impeccable/: design.json
api/: index.py
assets/: index-B-CRFevI.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  lib.ts  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FilterBar.tsx  InsightCard.tsx  Layout.tsx  Markdown.tsx  Pagination.tsx  Popover.tsx
frontend/src/routes/: FeedPage.tsx  NewsletterPage.tsx
public/: index.html
public/assets/: index-B2rnUi1e.js  index-CqxHma2i.js
src/alpha_engine/: __init__.py  cli.py  config.py  db.py  migration.py  models.py  orchestrate.py  seed.py
src/alpha_engine/api/: app.py  routes.py  schemas.py
src/alpha_engine/ingestion/: base.py  bluesky.py  careers.py  forums.py  github.py  mcp_discovery.py  numerai.py  reddit.py  registry.py  rss.py  stocktwits.py  twitter.py
src/alpha_engine/intelligence/: anthropic_provider.py  openai_compat_provider.py  prompts.py  provider.py  synthesize.py
src/alpha_engine/newsletter/: editorial.py  generate.py
src/alpha_engine/storage/: repository.py
tests/: test_careers_adapter.py  test_community_adapters.py  test_ingest_screen.py  test_newsletter.py  test_pipeline.py  test_providers.py
