[project]
name = "trading-alpha-engine"
version = "0.1.0"
description = "Automated pipeline + intelligence hub tracking AI/ML in trading, backtesting, execution, and risk."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Trading Alpha Engine" }]
dependencies = [
    "anthropic>=0.69",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "PyGithub>=2.3",
    "praw>=7.7",
    "feedparser>=6.0",
    "selectolax>=0.3.21",
    "tenacity>=8.4",
    "APScheduler>=3.10",
    "typer>=0.12",
    "loguru>=0.7",
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
alpha-engine = "alpha_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
